examples/neg/parsing/feature-flag.effekt
extern def whatever: Unit = 42 "whatever"
